Calidad y Seguridad (Sonar, Semgrep, Trivy)

--- a/sos_mascota/assets/dashboard.html
+++ b/sos_mascota/assets/dashboard.html
@@ -64,6 +64,12 @@
                 <a href="reports/risk_report/index.htm" target="_blank" class="btn">Ver Reporte</a>
             </div>
 
+            <div class="card" style="border-color: #6f42c1;">
+                <h3><i class="fas fa-dna"></i> Mutation Testing</h3>
+                <p>Pruebas de robustez (Mutantes eliminados vs vivos).</p>
+                <a href="reports/mutation/index.html" target="_blank" class="btn">Ver Reporte</a>
+            </div>
+
             <div class="card">
                 <h3><i class="fab fa-dart"></i> DartDocs</h3>
                 <p>Documentación técnica generada automáticamente desde el código.</p>
