--- a/sos_mascota/mutation-test-report/lib/vistamodelo/reportes/reporte_vm.dart.html
+++ b/sos_mascota/mutation-test-report/lib/vistamodelo/reportes/reporte_vm.dart.html
@@ -360,11 +360,11 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2025-12-04 12:04:46.052501</td>
+     <td class="ItemText" width="35%">2025-12-04 14:44:05.962206</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
-     <td class="ItemReport" width="15%">16</td>
-     <td class="ItemReport" width="15%">20</td>
-     <td class="ItemReportHigh" width="15%">80.0 %</td>
+     <td class="ItemReport" width="15%">4</td>
+     <td class="ItemReport" width="15%">4</td>
+     <td class="ItemReportHigh" width="15%">100.0 %</td>
      </tr>
      
      <tr>
@@ -372,7 +372,7 @@ td.barBg
      <td class="ItemText" width="35%">true</td>
      <td class="ItemLabel" width="10%">Blocked:</td>
      <td class="ItemReport" width="15%">0</td>
-     <td class="ItemReport" width="15%">20</td>
+     <td class="ItemReport" width="15%">4</td>
      <td class="ItemReportHigh" width="15%">0.0 %</td>
      </tr>
      </tbody>
@@ -424,22 +424,12 @@ td.barBg
 <a name="35"><span class="lineNumber">      35 </span>  Future&lt;File&gt; comprimirImagen(File archivo) async {</a>
 <a name="36"><span class="lineNumber">      36 </span>    final dir = await getTemporaryDirectory();</a>
 <a name="37"><span class="lineNumber">      37 </span>    final targetPath =</a>
-<a name="38"><button class="collapsible problem"><pre class="fileContents"><span class="lineNumber">      38 </span>        "${dir.absolute.path}/${DateTime.now().millisecondsSinceEpoch}.jpg";</pre></button>
-<div class="content">
-<b>Undetected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+         "${dir.absolute.path}<span class="changedTokens">*$</span>{DateTime.now().millisecondsSinceEpoch}.jpg";</span></td><td class="match">RegExp: pattern=/([^=]) flags=m<span class="tooltip">Id: builtin.arith.div</span></td></tr></table>
-
-</div></a><a name="39"><span class="lineNumber">      39 </span>    final result = await FlutterImageCompress.compressAndGetFile(</a>
+<a name="38"><span class="lineNumber">      38 </span>        "${dir.absolute.path}/${DateTime.now().millisecondsSinceEpoch}.jpg";</a>
+<a name="39"><span class="lineNumber">      39 </span>    final result = await FlutterImageCompress.compressAndGetFile(</a>
 <a name="40"><span class="lineNumber">      40 </span>      archivo.absolute.path,</a>
 <a name="41"><span class="lineNumber">      41 </span>      targetPath,</a>
-<a name="42"><button class="collapsible problem"><pre class="fileContents"><span class="lineNumber">      42 </span>      quality: 70,</pre></button>
-<div class="content">
-<b>Undetected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+       quality:<span class="changedTokens"> -70</span>,</span></td><td class="match">RegExp: pattern=([\s=\(])([1-9\.]+[0-9]+|0\.0*[1-9]) flags=m<span class="tooltip">Id: builtin.number.negative</span></td></tr></table>
-
-</div></a><a name="43"><span class="lineNumber">      43 </span>    );</a>
+<a name="42"><span class="lineNumber">      42 </span>      quality: 70,</a>
+<a name="43"><span class="lineNumber">      43 </span>    );</a>
 <a name="44"><span class="lineNumber">      44 </span>    // Retorna el archivo comprimido o el original si falló la compresión</a>
 <a name="45"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">      45 </span>    return result != null ? File(result.path) : archivo;</pre></button>
 <div class="content">
@@ -519,51 +509,29 @@ td.barBg
 <a name="106"><span class="lineNumber">     106 </span></a>
 <a name="107"><span class="lineNumber">     107 </span>  /// Avanza al siguiente paso del formulario (máximo 2).</a>
 <a name="108"><span class="lineNumber">     108 </span>  void siguientePaso() {</a>
-<a name="109"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     109 </span>    if (_paso &lt; 2) {</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+    <span class="changedTokens"> if (!(_paso &lt; 2)) {</span></span></td><td class="match">RegExp: pattern=[\s]if[\s]*\((.*?)\)[\s]*{ flags=ms<span class="tooltip">Id: builtin.if</span></td></tr></table>
-
-</div></a><a name="110"><span class="lineNumber">     110 </span>      _paso++;</a>
+<a name="109"><span class="lineNumber">     109 </span>    if (_paso &lt; 2) {</a>
+<a name="110"><span class="lineNumber">     110 </span>      _paso++;</a>
 <a name="111"><span class="lineNumber">     111 </span>      _notify();</a>
 <a name="112"><span class="lineNumber">     112 </span>    }</a>
 <a name="113"><span class="lineNumber">     113 </span>  }</a>
 <a name="114"><span class="lineNumber">     114 </span></a>
 <a name="115"><span class="lineNumber">     115 </span>  /// Retrocede al paso anterior del formulario (mínimo 0).</a>
 <a name="116"><span class="lineNumber">     116 </span>  void pasoAnterior() {</a>
-<a name="117"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     117 </span>    if (_paso &gt; 0) {</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+    <span class="changedTokens"> if (!(_paso &gt; 0)) {</span></span></td><td class="match">RegExp: pattern=[\s]if[\s]*\((.*?)\)[\s]*{ flags=ms<span class="tooltip">Id: builtin.if</span></td></tr></table>
-
-</div></a><a name="118"><span class="lineNumber">     118 </span>      _paso--;</a>
+<a name="117"><span class="lineNumber">     117 </span>    if (_paso &gt; 0) {</a>
+<a name="118"><span class="lineNumber">     118 </span>      _paso--;</a>
 <a name="119"><span class="lineNumber">     119 </span>      _notify();</a>
 <a name="120"><span class="lineNumber">     120 </span>    }</a>
 <a name="121"><span class="lineNumber">     121 </span>  }</a>
 <a name="122"><span class="lineNumber">     122 </span></a>
 <a name="123"><span class="lineNumber">     123 </span>  /// Agrega una URL de [url] a la lista de fotos del reporte.</a>
-<a name="124"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     124 </span>  void agregarFoto(String url) {</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+   void agregarFoto(String url) <span class="changedTokens">{
-    </span></span></td><td class="match">RegExp: pattern=([{]\s*)([^\(;=\s}]+\([^;]+\)\s*;) flags=m<span class="tooltip">Id: builtin.function.removeVoidCall1</span></td></tr></table>
-
-</div></a><a name="125"><span class="lineNumber">     125 </span>    reporte.fotos.add(url);</a>
+<a name="124"><span class="lineNumber">     124 </span>  void agregarFoto(String url) {</a>
+<a name="125"><span class="lineNumber">     125 </span>    reporte.fotos.add(url);</a>
 <a name="126"><span class="lineNumber">     126 </span>    _notify();</a>
 <a name="127"><span class="lineNumber">     127 </span>  }</a>
 <a name="128"><span class="lineNumber">     128 </span></a>
 <a name="129"><span class="lineNumber">     129 </span>  /// Agrega una URL de [url] a la lista de videos del reporte.</a>
-<a name="130"><button class="collapsible problem"><pre class="fileContents"><span class="lineNumber">     130 </span>  void agregarVideo(String url) {</pre></button>
-<div class="content">
-<b>Undetected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+   void agregarVideo(String url) <span class="changedTokens">{
-    </span></span></td><td class="match">RegExp: pattern=([{]\s*)([^\(;=\s}]+\([^;]+\)\s*;) flags=m<span class="tooltip">Id: builtin.function.removeVoidCall1</span></td></tr></table>
-
-</div></a><a name="131"><span class="lineNumber">     131 </span>    reporte.videos.add(url);</a>
+<a name="130"><span class="lineNumber">     130 </span>  void agregarVideo(String url) {</a>
+<a name="131"><span class="lineNumber">     131 </span>    reporte.videos.add(url);</a>
 <a name="132"><span class="lineNumber">     132 </span>    _notify();</a>
 <a name="133"><span class="lineNumber">     133 </span>  }</a>
 <a name="134"><span class="lineNumber">     134 </span></a>
@@ -588,17 +556,10 @@ td.barBg
 <div class="content">
 <b>Detected mutations:</b>
 <table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta == "otro" <span class="changedTokens">&amp;&amp;</span> confianza &lt; 0.6) {</span></td><td class="match">||<span class="tooltip">Id: builtin.or</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">2 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta <span class="changedTokens">!=</span> "otro" || confianza &lt; 0.6) {</span></td><td class="match">==<span class="tooltip">Id: builtin.op.eq</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">3 :</td><td class="mutationText" width="87%"><span class="addedLine">+    <span class="changedTokens"> if (!(etiqueta == "otro" || confianza &lt; 0.6)) {</span></span></td><td class="match">RegExp: pattern=[\s]if[\s]*\((.*?)\)[\s]*{ flags=ms<span class="tooltip">Id: builtin.if</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">4 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if <span class="changedTokens">(!(etiqueta == "otro" )|| confianza &lt; 0.6)</span> {</span></td><td class="match">RegExp: pattern=\(([^|(]*?)\|\|([^()|]*?)\) flags=m<span class="tooltip">Id: builtin.logical.or_chain2</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">5 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if <span class="changedTokens">(etiqueta == "otro" ||!( confianza &lt; 0.6))</span> {</span></td><td class="match">RegExp: pattern=\(([^|(]*?)\|\|([^()|]*?)\) flags=m<span class="tooltip">Id: builtin.logical.or_chain2</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">6 :</td><td class="mutationText" width="87%"><span class="addedLine">+     <span class="changedTokens">if (!(etiqueta == "otro" )||</span> confianza &lt; 0.6) {</span></td><td class="match">RegExp: pattern=if\s*\(([^|&\)]*?)([|&][|&]) flags=m<span class="tooltip">Id: builtin.if.start</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">7 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta == "otro" <span class="changedTokens">||!( confianza &lt; 0.6))</span> {</span></td><td class="match">RegExp: pattern=([|&][|&])([^|&]*?)\) flags=m<span class="tooltip">Id: builtin.if.end</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">8 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta == "otro" || confianza &lt;<span class="changedTokens"> -0.6</span>) {</span></td><td class="match">RegExp: pattern=([\s=\(])([1-9\.]+[0-9]+|0\.0*[1-9]) flags=m<span class="tooltip">Id: builtin.number.negative</span></td></tr></table>
+<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta == "otro" <span class="changedTokens">&amp;&amp;</span> confianza &lt; 0.6) {</span></td><td class="match">||<span class="tooltip">Id: builtin.or</span></td></tr><tr><td colspan="3"><hr class="ruler"/></td></tr><tr><td class="mutationLabel" width="5%">2 :</td><td class="mutationText" width="87%"><span class="addedLine">+     if (etiqueta <span class="changedTokens">!=</span> "otro" || confianza &lt; 0.6) {</span></td><td class="match">==<span class="tooltip">Id: builtin.op.eq</span></td></tr></table>
 
-</div></a><a name="153"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     153 </span>      throw Exception(</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+       throw<span class="changedTokens"> Exception(
-      ,
-        "❌ La imagen no parece contener una mascota. Intenta con otra foto.");</span></span></td><td class="match">RegExp: pattern=([\s][a-zA-Z]+?[^(;\s{}]*?)\s*\(([^,:;{}(]+?),([^,:;{}(]+?)\)\s*; flags=m<span class="tooltip">Id: builtin.function.arg2</span></td></tr></table>
-
-</div></a><a name="154"><span class="lineNumber">     154 </span>        "❌ La imagen no parece contener una mascota. Intenta con otra foto.",</a>
+</div></a><a name="153"><span class="lineNumber">     153 </span>      throw Exception(</a>
+<a name="154"><span class="lineNumber">     154 </span>        "❌ La imagen no parece contener una mascota. Intenta con otra foto.",</a>
 <a name="155"><span class="lineNumber">     155 </span>      );</a>
 <a name="156"><span class="lineNumber">     156 </span>    }</a>
 <a name="157"><span class="lineNumber">     157 </span></a>
@@ -608,13 +569,8 @@ td.barBg
 <a name="161"><span class="lineNumber">     161 </span>        .ref()</a>
 <a name="162"><span class="lineNumber">     162 </span>        .child("reportes_mascotas")</a>
 <a name="163"><span class="lineNumber">     163 </span>        .child(uid)</a>
-<a name="164"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     164 </span>        .child("${DateTime.now().millisecondsSinceEpoch}.jpg");</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+         .child("$<span class="changedTokens">{</span></span></td><td class="match">RegExp: pattern=([{]\s*)([^\(;=\s}]+\([^;]+\)\s*;) flags=m<span class="tooltip">Id: builtin.function.removeVoidCall1</span></td></tr></table>
-
-</div></a><a name="165"><span class="lineNumber">     165 </span></a>
+<a name="164"><span class="lineNumber">     164 </span>        .child("${DateTime.now().millisecondsSinceEpoch}.jpg");</a>
+<a name="165"><span class="lineNumber">     165 </span></a>
 <a name="166"><span class="lineNumber">     166 </span>    await ref.putFile(comprimido);</a>
 <a name="167"><span class="lineNumber">     167 </span>    return await ref.getDownloadURL();</a>
 <a name="168"><span class="lineNumber">     168 </span>  }</a>
@@ -630,13 +586,8 @@ td.barBg
 <a name="178"><span class="lineNumber">     178 </span>        .ref()</a>
 <a name="179"><span class="lineNumber">     179 </span>        .child("reportes_mascotas")</a>
 <a name="180"><span class="lineNumber">     180 </span>        .child(uid)</a>
-<a name="181"><button class="collapsible hit"><pre class="fileContents"><span class="lineNumber">     181 </span>        .child("${DateTime.now().millisecondsSinceEpoch}.mp4");</pre></button>
-<div class="content">
-<b>Detected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+         .child("$<span class="changedTokens">{</span></span></td><td class="match">RegExp: pattern=([{]\s*)([^\(;=\s}]+\([^;]+\)\s*;) flags=m<span class="tooltip">Id: builtin.function.removeVoidCall1</span></td></tr></table>
-
-</div></a><a name="182"><span class="lineNumber">     182 </span></a>
+<a name="181"><span class="lineNumber">     181 </span>        .child("${DateTime.now().millisecondsSinceEpoch}.mp4");</a>
+<a name="182"><span class="lineNumber">     182 </span></a>
 <a name="183"><span class="lineNumber">     183 </span>    await ref.putFile(archivo);</a>
 <a name="184"><span class="lineNumber">     184 </span>    return await ref.getDownloadURL();</a>
 <a name="185"><span class="lineNumber">     185 </span>  }</a>
@@ -679,14 +630,8 @@ td.barBg
 <a name="222"><span class="lineNumber">     222 </span>      return true;</a>
 <a name="223"><span class="lineNumber">     223 </span>    } catch (e) {</a>
 <a name="224"><span class="lineNumber">     224 </span>      _cargando = false;</a>
-<a name="225"><button class="collapsible problem"><pre class="fileContents"><span class="lineNumber">     225 </span>      _notify();</pre></button>
-<div class="content">
-<b>Undetected mutations:</b>
-<table class="mutationTable" width="100%">
-<tr><td class="mutationLabel" width="5%">1 :</td><td class="mutationText" width="87%"><span class="addedLine">+       _notify()<span class="changedTokens">;
-      </span></span></td><td class="match">RegExp: pattern=([};]\s*)([^\(;=\s}]+\([^;]+\)\s*;) flags=m<span class="tooltip">Id: builtin.function.removeVoidCall2</span></td></tr></table>
-
-</div></a><a name="226"><span class="lineNumber">     226 </span>      debugPrint("❌ Error al guardar reporte: $e");</a>
+<a name="225"><span class="lineNumber">     225 </span>      _notify();</a>
+<a name="226"><span class="lineNumber">     226 </span>      debugPrint("❌ Error al guardar reporte: $e");</a>
 <a name="227"><span class="lineNumber">     227 </span>      return false;</a>
 <a name="228"><span class="lineNumber">     228 </span>    }</a>
 <a name="229"><span class="lineNumber">     229 </span>  }</a>
