--- a/sos_mascota/mutation-test-report/mutation-test-report.html
+++ b/sos_mascota/mutation-test-report/mutation-test-report.html
@@ -360,11 +360,11 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2025-12-04 12:04:46.049352</td>
+     <td class="ItemText" width="35%">2025-12-04 14:44:05.957605</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
-     <td class="ItemReport" width="15%">16</td>
-     <td class="ItemReport" width="15%">20</td>
-     <td class="ItemReportHigh" width="15%">80.0 %</td>
+     <td class="ItemReport" width="15%">4</td>
+     <td class="ItemReport" width="15%">4</td>
+     <td class="ItemReportHigh" width="15%">100.0 %</td>
      </tr>
      
      <tr>
@@ -372,12 +372,12 @@ td.barBg
      <td class="ItemText" width="35%">true</td>
      <td class="ItemLabel" width="10%">Blocked:</td>
      <td class="ItemReport" width="15%">0</td>
-     <td class="ItemReport" width="15%">20</td>
+     <td class="ItemReport" width="15%">4</td>
      <td class="ItemReportHigh" width="15%">0.0 %</td>
      </tr>
      <tr>
      <td class="ItemLabel" width="10%">Quality rating:</td>
-     <td class="ItemText" width="35%">B</td>
+     <td class="ItemText" width="35%">A</td>
      <td class="ItemLabel" width="10%">Success:</td>
      <td class="ItemText" width="15%">true</td>
      <td class="ItemText" width="15%"></td>
@@ -401,13 +401,13 @@ td.barBg
 <tr><td class="FileLink" width="60%"><a href="lib/vistamodelo/reportes/reporte_vm.dart.html">lib/vistamodelo/reportes/reporte_vm.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barHi" width="80.0%" height="10"></td>
-    <td class="barBg" width="20.0%" height="10"></td>
+    <td class="barHi" width="100.0%" height="10"></td>
+    <td class="barBg" width="0.0%" height="10"></td>
   </tr></table>
   </td>
-  <td class="ItemReportHigh" width="10%">80.0 %</td>
-  <td class="ItemReportHigh" width="10%">16 / 20</td>
-  <td class="ItemReportHigh" width="10%">0 / 20</td>
+  <td class="ItemReportHigh" width="10%">100.0 %</td>
+  <td class="ItemReportHigh" width="10%">4 / 4</td>
+  <td class="ItemReportHigh" width="10%">0 / 4</td>
 </tr>
     </tbody>
 </table>
